--- a/TEST/WebContent/WEB-INF/web.xml
+++ b/TEST/WebContent/WEB-INF/web.xml
@@ -10,6 +10,14 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <filter>
+    <filter-name>editor</filter-name>
+    <filter-class>com.kime.filter.EditorUploadFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>editor</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping> 
   
   <filter>
     <filter-name>struts2</filter-name>
@@ -19,6 +27,7 @@
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
   <listener>
     <listener-class>
 	org.springframework.web.context.ContextLoaderListener
